--- a/style.css
+++ b/style.css
@@ -1,49 +1,60 @@
 <style>
 
+title {
+    color: lightskyblue;
+}
+
 body {
     background-color: lightgrey;
 }
 
 img {
-    width:60%;
-    height:auto;
+    width:100%;
+    height:100%;
+    box-align: left;
 }
 
-.box-set {
-    position: relative;
-    height: auto;
-    max-width:100%;
+.visualization {
+    width: 50%;
+    height: 50%;
 }
 
-.box-1 {
-    width: 75%;
-    height: 100%;
+.active, .panel:hover{
+    border-color: blue;
+    border-style: solid;
+}
+.box {
+    padding: 5px;
+    background-color: white;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    align-content: center;
 }
 
-.box-1 {
-    width: 25%;
-    height: 90%;
-}
-
-@media(max-width: 500px){
-
+.table {
+    font-size: 15px;
+    border-top-color: white;
 }
 
 .responsize {
     padding: 0 6px;
     float: right;
-    width: 24%;
+    width: 50%;
 }
 
 .navbar {
-    padding: 10px;
+    padding: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
     color: #5191fd;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .navbar li {
     display: inline-block;
-    padding: 20px;
+    padding: 10px;
     margin-right: 10px;
     margin-left: 10px;
     cursor: pointer;
@@ -51,46 +62,24 @@ img {
     border-radius: 3px;
 }
 
-.header {
-    height: 200px;
-    padding-top: 20px;
-    background: white;
+
+@media(max-width: 500px){
+    .navbar li {
+        padding: 10px
+    }
+    .box {
+        margin-right: 15px;
+        margin-left: 15px;
+    }
+    .navbar ul {
+        visibility: hidden;
+    }
 }
 
-.header h1 {
-    padding: 60px;
-    margin: 0;
-    color: rgb(7, 182, 144);
-    text-align: left;
-    font-weight: bold;
-    font-family: -webkit-body;
+@media only screen and (max-width: 768px) {
+    [class*="col-"] {
+        width: 100%;
+    }
 }
-
-.post {
-    margin-top: 50px;
-    margin-right: 100px;
-    margin-left: 100px;
-}
-
-div.gallery {
-    margin:5px;
-    float: right;
-    width: 50%;
-}
-
-div.gallery:hover {
-    border: 1x solid #000;
-}
-
-div.gallery img {
-    width: 50%;
-    height: auto;
-}
-
-div.desc {
-    padding: 15px;
-    text-align: center;
-}
-
 
 </style>
