--- a/style.css
+++ b/style.css
@@ -1,79 +1,136 @@
 <style>
 
-title {
-    color: lightskyblue;
-}
-
 body {
-    background-color: lightgrey;
+    background-color: rgb(107, 104, 104);
+    text-align: justify;
 }
 
-img {
-    width:100%;
-    height:100%;
-    box-align: left;
+h1 {
+    color: turquoise;
+    font-weight: bold;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
 }
 
-.visualization {
+h2 {
+    color: turquoise;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.container {
+    background-color: white;
+    padding: 25px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    margin-left: 25px;
+    margin-right: 25px;
+
+}
+
+.container-fluid .navbar-brand {
+    color: white;
+    padding: 10px;
+    background-color: turquoise;
+    font-size: 1.5em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.main_img {
     width: 50%;
-    height: 50%;
+    float: left;
+    margin: 5px;
 }
 
-.active, .panel:hover{
+
+.image {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    display: block;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.col-6:hover .image {
+    opacity: 0.5;
+}
+  
+.col-6:hover .middle {
+    opacity: 1;
+}
+
+.text {
+    color: black;
+    background-color: white;
+    float: right;
+}
+
+.active {
     border-color: blue;
     border-style: solid;
+} 
+
+.panel:hover {
+    border-color: blue;
+    border-style: solid;
+    opacity: inherit;
 }
-.box {
-    padding: 5px;
-    background-color: white;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    align-content: center;
-}
+
 
 .table {
     font-size: 15px;
     border-top-color: white;
 }
 
-.responsize {
-    padding: 0 6px;
-    float: right;
-    width: 50%;
-}
-
 .navbar {
     padding: 5px;
     margin-right: 5px;
     margin-left: 5px;
-    color: #5191fd;
-    font-size: 20px;
+    font-size: 25px;
+}
+.navbar-nav li {
+    display: inline-block;
+}
+
+.navbaractive {
+    color: turquoise;
+    font-size: 25px;
+    margin: 5px;
+    font-weight: bold;
 }
 
 .navbar li {
     display: inline-block;
-    padding: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
+    padding: 25px;
+    margin-right: 25px;
+    margin-left: 25px;
     cursor: pointer;
-    background: #fff;
+    background: white;
     border-radius: 3px;
 }
 
-
-@media(max-width: 500px){
-    .navbar li {
-        padding: 10px
-    }
-    .box {
-        margin-right: 15px;
-        margin-left: 15px;
-    }
-    .navbar ul {
-        visibility: hidden;
-    }
+@media (min-width: 992px) {
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: .5rem;
+    padding-left: .5rem;
+}
 }
 
 @media only screen and (max-width: 768px) {
